Space: Membership Attributes
