# docs/swagger/content.yaml
@@ -250,6 +250,10 @@ definitions:
         readOnly: true
         allOf:
           - $ref: "user.yaml#/definitions/UserShort"
+      scheduled_at:
+        type: string
+        readOnly: true
+        example: "2023-09-14 05:15:00"
       created_at:
         type: string
         readOnly: true
